@@ -118,6 +118,7 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 - Add setting `setup.kibana.space.id` to support Kibana Spaces {pull}7942[7942]
 - Add Beats Central Management {pull}8559[8559]
 - Allow Bus to buffer events in case listeners are not configured. {pull}8527[8527]
+- Enable `host` and `cloud` metadata processors by default. {pull}8596[8596]
 
 *Auditbeat*
 
